Revert "fix(#13): add some improved colours for dark mode" (#58)
This reverts commit 1df1ba395445bceffb41d21cc9308179250adc8d.

# Conflicts:
#	extension/css/content.css

--- a/extension/css/content.css
+++ b/extension/css/content.css
@@ -76,24 +76,3 @@
 [class^="layout-col-md"]:has(.types):not(:has(li)) {
     display: none;
 }
-
-/* Dark Mode fixes */
-head:has(link[href^="/dist/assets/theme-dark"]) + body .bad {
-    color: #ffb8b6;
-}
-
-head:has(link[href^="/dist/assets/theme-dark"]) + body .good {
-    color: #7cde7c;
-}
-
-head:has(link[href^="/dist/assets/theme-dark"]) + body .warning {
-    color: #ffbc5d;
-}
-
-head:has(link[href^="/dist/assets/theme-dark"]) + body .visual-flight-plan .vfp div.day div.blocks div.block.flight.locked {
-    color: #a26900;
-}
-
-head:has(link[href^="/dist/assets/theme-dark"]) + body .visual-flight-plan .vfp div.day div.blocks div.block.flight.error {
-    color: #cd0000;
-}
